kubernete/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-pod
  labels:
    app: hello-world
spec:
  containers:
  - name: hello-world
    image: nginx:alpine  
    ports:
    - containerPort: 80
